增补页面，修复UI显示BUG

--- a/app/src/main/res/layout/activity_good_details.xml
+++ b/app/src/main/res/layout/activity_good_details.xml
@@ -70,12 +70,11 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="@color/bg_white"
             android:button="@null"
             android:drawablePadding="5dp"
-            android:drawableTop="@drawable/ic_store_fav_de"
+            android:drawableTop="@drawable/fav_selector"
             android:gravity="center_horizontal"
-            android:padding="5dp"
+            android:paddingTop="4dp"
             android:text="收藏"
             android:textColor="@color/tv_hint"
             android:textSize="@dimen/tv_small"/>
