--- a/app/src/main/res/layout/fragment_category_item_gridview.xml
+++ b/app/src/main/res/layout/fragment_category_item_gridview.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              android:layout_margin="10px"
-              android:layout_marginTop="30px"
+              android:layout_margin="5dp"
+              android:layout_marginTop="10dp"
               android:background="@color/bg_white"
               android:gravity="center"
               android:orientation="vertical"
@@ -13,15 +13,15 @@
 
     <ImageView
         android:id="@+id/tvGoodsClassImage"
-        android:layout_width="150px"
-        android:layout_height="120px"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:scaleType="fitXY"/>
 
     <TextView
         android:id="@+id/tvGoodsClassName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20px"
+        android:layout_margin="5dp"
         android:singleLine="true"
         android:textColor="@color/tv_brand"
         android:textSize="@dimen/tv_Normal"/>
