--- a/app/src/main/res/layout/fragment_good_eva_tab.xml
+++ b/app/src/main/res/layout/fragment_good_eva_tab.xml
@@ -3,7 +3,7 @@
               android:layout_height="45dp"
               android:background="@color/bg_white"
               android:orientation="horizontal"
-              android:padding="6dp">
+              android:paddingTop="6dp">
 
     <LinearLayout
         android:id="@+id/ll_eva_all"
