--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -3,12 +3,12 @@
        android:shape="rectangle">
 
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="15dip"/>
+    <corners android:radius="5dip"/>
     <!-- padding：Button里面的文字与Button边界的间隔 -->
     />
     <!-- 边框的宽度和颜色颜色 -->
 
 
     <!-- 背景色 -->
-    <solid android:color="#1da039"></solid>
+    <solid android:color="@color/colorPrimaryDark"></solid>
 </shape>
