--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -4,9 +4,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <include
-        layout="@layout/activity_confirm_order_header"></include>
-
+    <include layout="@layout/view_header_tv_msg"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_confirm_order"
