--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,7 @@
     <FrameLayout
         android:id="@+id/login_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
+        android:layout_height="match_parent"/>
 
     <!--&lt;!&ndash;底部区域&ndash;&gt;-->
     <!--<include layout="@layout/activity_main_bottom"/>-->
