--- a/app/src/main/res/layout/activity_msg_header.xml
+++ b/app/src/main/res/layout/activity_msg_header.xml
@@ -44,6 +44,7 @@
             app:tl_textBold="SELECT"/>
 
         <TextView
+            android:id="@+id/tv_mgs_edit"
             style="@style/RegularTextView"
             android:layout_weight="1"
             android:gravity="center"
