--- a/app/src/main/res/layout/activity_search_header.xml
+++ b/app/src/main/res/layout/activity_search_header.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="40px"
+            android:layout_marginLeft="20dp"
             android:src="@drawable/icon_back"/>
 
         <RelativeLayout
