--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -14,63 +14,64 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="5px"
-        android:orientation="horizontal">
-
-        <ScrollView
-            android:id="@+id/svGoodsClassRoot"
-            android:layout_width="240px"
-            android:layout_height="fill_parent"
-            android:background="@color/normal_bg"
-            android:layout_marginRight="20px"
-            android:overScrollMode="never"
-            android:scrollbars="none">
-
-            <LinearLayout
-                android:id="@+id/llGoodsClassRoot"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"/>
-        </ScrollView>
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginRight="10px"
-          android:orientation="vertical">
-
-
-
-        <ScrollView
-            android:id="@+id/svGoodsClass"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:overScrollMode="never"
-            android:scrollbars="none">
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/cagetory_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="350px"
-                    android:layout_marginTop="5px"
-                    android:background="@color/bg_white"
-                    android:scaleType="fitXY"
-                    android:layout_gravity="center_horizontal"/>
+            <ScrollView
+                android:id="@+id/svGoodsClassRoot"
+                android:layout_width="80dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="5dp"
+                android:background="@color/normal_bg"
+                android:overScrollMode="never"
+                android:scrollbars="none">
+
                 <LinearLayout
-                    android:id="@+id/llGoodsClass"
+                    android:id="@+id/llGoodsClassRoot"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"/>
+            </ScrollView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:orientation="vertical">
+
+
+                <ScrollView
+                    android:id="@+id/svGoodsClass"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:overScrollMode="never"
+                    android:scrollbars="none">
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/cagetory_img"
+                            android:layout_width="match_parent"
+                            android:layout_height="120dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="3dp"
+                            android:background="@color/bg_white"
+                            android:scaleType="fitXY"/>
+
+                        <LinearLayout
+                            android:id="@+id/llGoodsClass"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"/>
+                    </LinearLayout>
+                </ScrollView>
             </LinearLayout>
-        </ScrollView>
-      </LinearLayout>
-    </LinearLayout>
+        </LinearLayout>
     </com.youth.xframe.widget.loadingview.XLoadingView>
 </LinearLayout>
