--- a/app/src/main/res/layout/fragment_category_header.xml
+++ b/app/src/main/res/layout/fragment_category_header.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?android:actionBarSize"
+    android:layout_height="45dp"
     android:background="@color/colorPrimaryDark"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
+        android:layout_height="45dp"
         android:background="@color/bg_white"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -20,56 +20,57 @@
 
         <ImageView
             android:id="@+id/category_btn_scan"
-            android:layout_width="75px"
-            android:layout_height="75px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50px"
+            android:layout_marginLeft="20dp"
             android:src="@drawable/act_home_scan_de"/>
 
-        <LinearLayout
-            android:layout_width="700px"
-            android:layout_height="90px"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
             android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
             android:background="@drawable/btn_bg_normal"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/category_et_search"
-                android:layout_width="610px"
-                android:layout_height="90px"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
                 android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
                 android:background="@null"
                 android:focusableInTouchMode="false"
                 android:hint="@string/search_search_hint"
-                android:padding="20px"
+                android:padding="10dp"
                 android:paddingLeft="10px"
+                android:paddingRight="30dp"
                 android:singleLine="true"
                 android:textColor="@color/tv_name"
                 android:textColorHint="@color/tv_hint"
                 android:textSize="@dimen/tv_light"/>
 
             <ImageView
-                android:layout_width="90px"
-                android:layout_height="90px"
+                android:layout_width="30dp"
+                android:layout_height="35dp"
+                android:layout_alignParentRight="true"
                 android:background="@drawable/btn_bg_gray"
-                android:padding="10px"
-                android:src="@drawable/act_home_search_de"
-                />
+                android:padding="8dp"
+                android:src="@drawable/act_home_search_de"/>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
         <ImageView
             android:id="@+id/category_btn_msg"
-            android:layout_width="80px"
-            android:layout_height="80px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="40px"
+            android:layout_marginRight="20dp"
             android:src="@drawable/act_home_msg_de"/>
 
     </RelativeLayout>
