--- a/app/src/main/res/layout/fragment_category_item_class.xml
+++ b/app/src/main/res/layout/fragment_category_item_class.xml
@@ -12,16 +12,17 @@
     <RelativeLayout
         android:id="@+id/rlGoodClass"
         android:layout_width="fill_parent"
-        android:layout_height="85px"
+        android:layout_height="28dp"
         android:background="@color/normal_bg">
 
         <ImageView
             android:id="@+id/tvGoodsClassDot"
-            android:layout_width="18px"
-            android:layout_height="18px"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30px"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:src="@drawable/nc_sharp_dot2"/>
 
         <TextView
@@ -30,14 +31,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="30px"
+            android:layout_marginLeft="25dp"
             android:textSize="@dimen/tv_Normal"
             android:textColor="@color/tv_name"/>
 
         <ImageView
             android:id="@+id/btnGoodsClass"
-            android:layout_width="92px"
-            android:layout_height="92px"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5.0dip"
@@ -53,5 +54,5 @@
         android:isScrollContainer="false"
         android:listSelector="#00000000"
         android:numColumns="3"
-        android:verticalSpacing="15px"/>
+        android:verticalSpacing="5dp"/>
 </LinearLayout>
