--- a/app/src/main/res/layout/fragment_good_dialog_promotion.xml
+++ b/app/src/main/res/layout/fragment_good_dialog_promotion.xml
@@ -21,11 +21,11 @@
 
         <ImageView
             android:id="@+id/iv_close"
-            android:layout_width="50px"
-            android:layout_height="50px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="30px"
-            android:src="@drawable/icon_close"/>
+            android:layout_marginRight="10dp"
+            android:background="@drawable/icon_close"/>
 
     </RelativeLayout>
 
