--- a/app/src/main/res/layout/fragment_good_itemtab.xml
+++ b/app/src/main/res/layout/fragment_good_itemtab.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="125px"
+        android:layout_height="40dp"
         android:background="@color/bg_white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
