--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -24,8 +24,8 @@
             android:id="@+id/iv_mine_msg"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
             android:src="@drawable/act_home_msg"/>
 
         <RelativeLayout
@@ -81,12 +81,13 @@
     </RelativeLayout>
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:background="@color/bg_white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="20px">
+        android:padding="5dp">
 
         <LinearLayout
             android:id="@+id/ll_mine_fav"
