--- a/app/src/main/res/layout/fragment_msg.xml
+++ b/app/src/main/res/layout/fragment_msg.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_msg"
         android:layout_width="match_parent"
-        android:paddingTop="3dp"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:paddingTop="3dp"/>
 
 </LinearLayout>
