--- a/app/src/main/res/layout/item_good_list.xml
+++ b/app/src/main/res/layout/item_good_list.xml
@@ -1,73 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="125dp"
               android:layout_margin="1px"
               android:background="@color/bg_white"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="125dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/ivGoodPic"
-            android:layout_width="105dp"
-            android:layout_height="105dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:layout_margin="10dp"
+            android:background="@drawable/test_good_img"
             android:scaleType="fitXY"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="105dp"
+            android:layout_height="110dp"
             android:layout_margin="10dp"
-            android:layout_marginRight="66dp"
+            android:layout_marginRight="60dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_goods_name"
-                style="@style/GoodsNameTextView"/>
-
-            <TextView
-                android:id="@+id/tv_goods_postage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:letterSpacing="0.1"
-                android:lineSpacingExtra="6dp"
-                android:lines="1"
-                android:text="包邮"
-                android:textColor="@color/tv_price"
-                android:textSize="36px"/>
-
-            <TextView
-                android:id="@+id/tv_goods_price"
-                style="@style/GoodsPriceTextView"
-                android:layout_marginTop="10dp"
+                style="@style/GoodsNameTextView"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="产品奥术大所大所所多"
                 />
 
+
+            <TextView
+                android:id="@+id/tv_good_active"
+                style="@style/LightTextView"
+                android:layout_below="@id/tv_goods_name"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button_bg"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:text="虚拟兑换"
+                android:textColor="@color/bg_white"/>
+
             <LinearLayout
+                android:id="@+id/ll_tv_sell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
 
                 <TextView
                     android:id="@+id/tv_goods_sellnum"
-                    style="@style/SmallHintTextView"/>
+                    style="@style/SmallHintTextView"
+                    android:text="月销量：123件"
+                    />
 
                 <TextView
                     android:id="@+id/tv_goods_talk"
                     style="@style/SmallHintTextView"
-                    android:layout_marginLeft="13dp"
-                    />
-
-
+                    android:layout_marginLeft="15dp"
+                    android:text="评论：23"/>
             </LinearLayout>
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/tv_goods_price"
+                style="@style/GoodsPriceTextView"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:text="￥123.00"
+                />
+
+        </RelativeLayout>
     </LinearLayout>
 
     <View
