--- a/app/src/main/res/layout/view_dialog_gooddetail_spec.xml
+++ b/app/src/main/res/layout/view_dialog_gooddetail_spec.xml
@@ -15,9 +15,9 @@
 
         <ImageView
             android:id="@+id/ivSelectedGoodsImg"
-            android:layout_width="90.0dip"
-            android:layout_height="90.0dip"
-            android:layout_margin="10.0dip"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="10dp"
             android:scaleType="fitXY"/>
 
         <TextView
@@ -60,14 +60,14 @@
 
         <ImageView
             android:id="@+id/tvOut"
-            android:layout_width="22.0dip"
-            android:layout_height="22.0dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="12.0dip"
             android:layout_marginTop="10.0dip"
+            android:background="@drawable/icon_close"
             android:gravity="center_horizontal"
-            android:paddingBottom="10.0dip"
-            android:src="@drawable/icon_close"/>
+            android:paddingBottom="10.0dip"/>
 
 
     </RelativeLayout>
