--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -68,9 +68,9 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
+                android:id="@+id/iv_store_bg"
                 android:layout_width="match_parent"
                 android:layout_height="175dp"
-                android:background="@drawable/test_store_bg"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5"/>
@@ -86,8 +86,8 @@
                 <ImageView
                     android:id="@+id/iv_store_logo"
                     android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/test_good_store"/>
+                    android:layout_height="40dp"/>
+
 
                 <View
                     android:layout_width="1px"
@@ -103,14 +103,25 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="120dp"
                     android:layout_toRightOf="@id/iv_store_logo"
-                    android:text="梅子熟了 文艺复古清新女装"
+
                     android:textColor="@color/bg_white"/>
 
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/fl_store_sign"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_store_name"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="130dp"
+                    android:layout_toRightOf="@id/iv_store_logo"
+                    app:alignContent="flex_start"
+                    app:flexWrap="wrap"/>
+
                 <TextView
+                    android:id="@+id/tv_store_fans"
                     style="@style/LightTextView"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="70.0dip"
-                    android:text="247.6万"
                     android:textColor="@color/bg_white"/>
 
                 <TextView
@@ -121,12 +132,16 @@
                     android:text="粉丝数"
                     android:textColor="@color/bg_white"/>
 
-                <Button
+                <CheckBox
+                    android:id="@+id/bt_store_fav"
                     android:layout_width="60.0dip"
                     android:layout_height="22.0dip"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/bg_flow_selected"
+                    android:background="@color/colorPrimaryDark"
+                    android:button="@null"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="3dp"
                     android:text="+关注"
                     android:textColor="@color/bg_white"
                     android:textSize="@dimen/tv_light"/>
@@ -212,6 +227,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -236,12 +252,13 @@
             app:tl_textsize="@dimen/tv_Regular"
             app:tl_underline_gravity="BOTTOM"/>
 
+        <View
+            style="@style/LightLine"/>
+
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
