--- a/app/src/main/res/layout/fragment_msg_item.xml
+++ b/app/src/main/res/layout/fragment_msg_item.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:background="@drawable/select_press"
+                android:background="@color/bg_white"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp">
