--- a/app/src/main/res/layout/fragment_store_top.xml
+++ b/app/src/main/res/layout/fragment_store_top.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:adjustViewBounds="true"
-        android:background="@drawable/test_store_ad"/>
+        android:scaleType="fitXY"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,10 +59,8 @@
         android:layout_weight="1"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+      style="@style/NormalTextView"
         android:layout_marginTop="3dp"
-        android:background="@color/bg_white"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
