--- a/app/src/main/res/layout/item_good_grid.xml
+++ b/app/src/main/res/layout/item_good_grid.xml
@@ -18,6 +18,7 @@
             android:id="@+id/ivGoodPic"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+
             android:layout_margin="5dp"/>
 
 
@@ -27,6 +28,7 @@
             android:layout_below="@id/ivGoodPic"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
+
             android:letterSpacing="0.01"
             android:lineSpacingExtra="3dp"
             android:maxLines="2"
@@ -38,7 +40,6 @@
             style="@style/SmallHintTextView"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="5dp"
-            android:text="月销量:123件"
             />
 
         <TextView
@@ -48,7 +49,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="15dp"
             android:layout_toRightOf="@id/tv_goods_sellnum"
-            android:text="评论:12"
+
             />
 
         <TextView
@@ -56,21 +57,21 @@
             style="@style/GoodsPriceTextView"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="25dp"
-            android:text="￥123.00"
-            />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
         <TextView
             android:id="@+id/tv_good_active"
             style="@style/LightTextView"
-            android:layout_below="@id/tv_goods_name"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
             android:layout_toRightOf="@id/tv_goods_price"
             android:background="@drawable/button_bg"
             android:padding="5dp"
             android:text="虚拟兑换"
             android:textColor="@color/bg_white"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
 
     </RelativeLayout>
