--- a/app/src/main/res/layout/view_store_sign.xml
+++ b/app/src/main/res/layout/view_store_sign.xml
@@ -6,14 +6,8 @@
 
     <ImageView
         android:id="@+id/ivImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/cardview_compat_inset_shadow"
-        android:src="@drawable/ic_shopcar_select"/>
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_margin="@dimen/cardview_compat_inset_shadow"/>
 
-    <TextView
-        android:id="@+id/store_sign_type"
-        style="@style/SmallHintTextView"
-        android:layout_gravity="right"
-        android:layout_marginLeft="15dp"/>
 </FrameLayout>
