--- a/app/src/main/res/layout/activity_search_goodshow.xml
+++ b/app/src/main/res/layout/activity_search_goodshow.xml
@@ -5,12 +5,13 @@
               android:background="@color/bg_gray"
               android:orientation="vertical">
 
-    <include layout="@layout/activity_search_header"/>
+    <include layout="@layout/activity_search_header"></include>
+
+    <TextView style="@style/XYLine"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="3dp"
         android:background="@color/bg_gray"
         android:orientation="vertical">
 
@@ -19,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/bg_white"
+            android:elevation="3dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -126,7 +128,7 @@
                         android:id="@+id/rvGoodList"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/bg_gray"/>
+                        android:background="@color/colorLine"/>
                 </android.support.v4.widget.SwipeRefreshLayout>
 
                 <LinearLayout
@@ -141,6 +143,8 @@
         </com.youth.xframe.widget.loadingview.XLoadingView>
 
     </LinearLayout>
+
+    <include layout="@layout/activity_search_header"/>
 
     <include layout="@layout/activity_search_goodshow_header"/>
 
