--- a/app/src/main/res/layout/activity_search_header.xml
+++ b/app/src/main/res/layout/activity_search_header.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?android:actionBarSize"
+    android:layout_height="45dp"
     android:background="@color/colorPrimary"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
+        android:layout_height="45dp"
         android:background="@color/bg_white"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -26,21 +26,55 @@
             android:layout_marginLeft="20dp"
             android:src="@drawable/icon_back"/>
 
+
         <RelativeLayout
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/search_btn_back"
             android:background="@drawable/btn_bg_normal"
             android:orientation="horizontal">
 
+            <RelativeLayout
+                android:id="@+id/ll_store_good"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true">
+
+                <TextView
+                    android:id="@+id/tvSortName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="8dp"
+                    android:text="商品"
+                    android:textColor="@color/tv_name"
+                    android:textSize="@dimen/tv_light"/>
+
+                <ImageView
+                    android:id="@+id/ivsort"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="35dp"
+                    android:background="@drawable/goodshow_down_bg"/>
+
+                <View
+                    style="@style/XYVLine"
+                    android:layout_marginLeft="8dp"
+                    android:layout_toRightOf="@id/ivsort"/>
+            </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="220dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true">
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="55dp">
+
 
                 <EditText
                     android:id="@+id/search_et"
@@ -48,6 +82,7 @@
                     android:layout_height="30dp"
                     android:layout_centerInParent="true"
                     android:layout_centerVertical="true"
+
                     android:background="@null"
                     android:hint="@string/search_search_hint"
                     android:padding="4dp"
@@ -56,6 +91,7 @@
                     android:textColor="@color/tv_name"
                     android:textColorHint="@color/tv_hint"
                     android:textSize="@dimen/tv_light"/>
+
 
                 <ImageView
                     android:id="@+id/seach_btn_delete"
@@ -75,7 +111,7 @@
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/btn_bg_gray"
-                android:padding="4dp"
+                android:padding="8dp"
                 android:src="@drawable/act_home_search_de"/>
         </RelativeLayout>
 
