--- a/app/src/main/res/layout/fragment_footer_item.xml
+++ b/app/src/main/res/layout/fragment_footer_item.xml
@@ -8,8 +8,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="115dp"
-        android:background="@drawable/test_footer_bg"/>
+        android:layout_height="115dp"/>
 
 
     <Button
