--- a/app/src/main/res/layout/fragment_good_detail_web.xml
+++ b/app/src/main/res/layout/fragment_good_detail_web.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
     <com.tamic.jswebview.view.ProgressBarWebView
-        android:id="@+id/webview"
+        android:id="@+id/web_detail"
         style="@style/NumberProgressBar_Default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
