--- a/app/src/main/res/layout/fragment_store_sell.xml
+++ b/app/src/main/res/layout/fragment_store_sell.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="220dp"
+              android:layout_height="190dp"
               android:orientation="horizontal"
               android:padding="5dp">
 
@@ -9,13 +9,13 @@
         android:id="@+id/iv_store_co_1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginRight="4dp"
-        android:layout_weight="1">
+        android:layout_weight="5">
 
         <ImageView
             android:id="@+id/iv_img_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/test_good_img"
             android:scaleType="fitXY"
             />
 
@@ -26,7 +26,6 @@
             android:layout_alignParentBottom="true"
             android:background="@color/colorTransparency_B"
             android:gravity="center"
-
             android:textColor="@color/bg_white"
             android:textSize="@dimen/tv_light"/>
 
@@ -35,8 +34,8 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="4dp"
-        android:layout_weight="2"
+        android:layout_marginLeft="5dp"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -44,15 +43,18 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="2dp"
             android:layout_weight="1">
 
             <ImageView
                 android:id="@+id/iv_img_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/test_good_img"
                 android:scaleType="fitXY"
-                />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
 
             <TextView
                 android:id="@+id/tv_sell_2"
@@ -71,7 +73,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -79,7 +81,6 @@
                 android:id="@+id/iv_store_co_3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="4dp"
                 android:layout_weight="1">
 
                 <ImageView
@@ -89,6 +90,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:background="@drawable/test_good_img"
                     android:scaleType="fitXY"
                     />
 
@@ -105,36 +107,6 @@
 
             </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/iv_store_co_4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:id="@+id/iv_img_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="4dp"
-                    android:scaleType="fitXY"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_sell_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/colorTransparency_B"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:textColor="@color/bg_white"
-                    android:textSize="@dimen/tv_light"/>
-
-
-            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
