--- a/app/src/main/res/layout/item_good_grid.xml
+++ b/app/src/main/res/layout/item_good_grid.xml
@@ -2,7 +2,9 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="255dp">
+    android:layout_height="255dp"
+    android:layout_margin="1px"
+    android:background="@color/bg_white">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,14 +13,12 @@
         android:layout_marginLeft="1px"
         android:layout_marginRight="1px"
         android:layout_marginTop="1px"
-        android:background="@color/bg_white"
         android:padding="5dp">
 
         <ImageView
             android:id="@+id/ivGoodPic"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-
             android:layout_margin="5dp"/>
 
 
@@ -56,16 +56,16 @@
             android:id="@+id/tv_goods_price"
             style="@style/GoodsPriceTextView"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="25dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="25dp"/>
 
         <TextView
             android:id="@+id/tv_good_active"
-            style="@style/LightTextView"
-            android:layout_marginLeft="8dp"
+            style="@style/SmallTextView"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="20dp"
+            android:layout_marginLeft="8dp"
             android:layout_toRightOf="@id/tv_goods_price"
             android:background="@drawable/button_bg"
             android:padding="5dp"
